--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,43 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.sangdee</groupId>
+  <groupId>io.github.sangdee</groupId>
   <artifactId>kss-java</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.6.0</version>
+
+  <name>kss-java</name>
+  <description>Korean Sentence Splitter</description>
+  <url>https://github.com/sangdee/kss-java</url>
+
+  <licenses>
+    <license>
+      <name>BSD 3-Clause "New" or "Revised" License</name>
+      <url>https://choosealicense.com/licenses/bsd-3-clause/</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>sangdee</name>
+      <email>tkdwl06@gmail.com</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <url>https://github.com/sangdee/kss-java.git</url>
+  </scm>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
