--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>io.github.sangdee</groupId>
   <artifactId>kss-java</artifactId>
   <version>2.6.0</version>
+  <packaging>jar</packaging>
 
   <name>kss-java</name>
   <description>Korean Sentence Splitter</description>
@@ -27,7 +28,8 @@
   </developers>
 
   <scm>
-    <url>https://github.com/sangdee/kss-java.git</url>
+    <connection>scm:git:git://github.com/sangdee/kss-java.git</connection>
+    <url>https://github.com/sangdee/kss-java</url>
   </scm>
 
   <distributionManagement>
@@ -40,6 +42,62 @@
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- GPG sign -->
+
+    </plugins>
+  </build>
 
   <dependencies>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
